--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
-    "dev": "vite"
+    "dev": "vite # http://localhost:5173/"
+  },
+  "dependencies": {
+    "ydf-training": "0.0.1"
   }
 }
